--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <meta property="twitter:title" content="ConverterPro - Universal Unit Converter" />
     <meta property="twitter:description" content="Convert between any units instantly with our comprehensive converter. 17+ categories, 200+ units, real-time rates!" />
     <meta property="twitter:image" content="https://converterpro.online/icon-512.png" />
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4837968142917989"
+     crossorigin="anonymous"></script>
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
     {
