--- a/index.html
+++ b/index.html
@@ -37,41 +37,6 @@
     content="Convert between any units instantly with our comprehensive converter. 17+ categories, 200+ units, real-time rates!" />
   <meta property="twitter:image" content="https://converterpro.online/icon-512.png" />
 
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4837968142917989"
-    crossorigin="anonymous"></script>
-
-  <!-- JSON-LD Structured Data -->
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebApplication",
-      "name": "ConverterPro",
-      "description": "Universal unit converter supporting 200+ units across 17 categories including area, length, weight, temperature, time, currency conversion with real-time rates",
-      "url": "https://converterpro.online/",
-      "creator": {
-        "@type": "Organization",
-        "name": "BKND Groups",
-        "founder": {
-          "@type": "Person",
-          "name": "Kamalesh Kumar Balamurugan",
-          "email": "kamaleshkumarbalamurugan@gmail.com"
-        }
-      },
-      "applicationCategory": "UtilitiesApplication",
-      "operatingSystem": "Web Browser",
-      "offers": {
-        "@type": "Offer",
-        "price": "0",
-        "priceCurrency": "USD"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.8",
-        "ratingCount": "1250"
-      }
-    }
-    </script>
-
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
   <!-- GitHub Pages SPA Redirect Script -->
@@ -92,6 +57,11 @@
 
 <body>
   <div id="root"></div>
+
+  <!-- AdSense Script -->
+  <script async defer
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4837968142917989"
+    crossorigin="anonymous"></script>
 
   <!-- GPT Embed (do not remove) -->
   <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
