--- a/index.html
+++ b/index.html
@@ -6,18 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#ffffff" />
   <link rel="manifest" href="/manifest.json" />
-  <title>ConverterPro - Universal Unit Converter</title>
+  <title>ConverterPro | Free Online Unit Converter – Length, Currency, Weight & More</title>
 
   <!-- Primary SEO Meta Tags -->
   <meta name="title" content="ConverterPro - Universal Unit Converter | Convert Any Unit Instantly" />
   <meta name="description"
-    content="Free online unit converter by BKND Groups. Convert area, length, weight, temperature, time, currency, and more. Includes acre to cent, sqft to sqm, kg to lbs, cm to inches, binary to decimal converters and 200+ units across 17 categories." />
+    content="Instantly convert between 200+ units in 17+ categories with real-time currency rates. Fast, free, mobile-friendly & fully responsive by ConverterPro." />
   <meta name="keywords"
-    content="unit converter online, conversion calculator, area converter, length converter, weight converter, time converter, number system converter, acre to cent converter, sqft to sqm converter, kg to lbs converter, cm to inches converter, binary to decimal converter, fast unit conversion tool, free measurement converter, hectare to acre calculator, currency converter, temperature converter, universal converter online, best unit converter website, land measurement tool, metric to imperial converter, measurement conversion calculator, convert units easily, instant unit calculator" />
+    content="unit converter online, convert units instantly, currency converter real-time, length converter, weight converter, area converter, free unit conversion tool, measurement conversion, online converter, instant conversion, ConverterPro" />
   <meta name="author" content="BKND Groups - Kamalesh Kumar Balamurugan" />
   <meta name="robots" content="index, follow" />
   <meta name="language" content="English" />
   <link rel="canonical" href="https://converterpro.online/" />
+
+  <!-- Mobile Specific Meta Tags -->
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="HandheldFriendly" content="true" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <link rel="apple-touch-icon" href="/public/placeholder.svg" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
@@ -33,6 +40,21 @@
   <meta property="twitter:title" content="ConverterPro - Universal Unit Converter" />
   <meta property="twitter:description"
     content="Convert between any units instantly with our comprehensive converter. 17+ categories, 200+ units, real-time rates!" />
+
+  <!-- Website Schema -->
+  <script type="application/ld+json">
+    {JSON.stringify({
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "ConverterPro",
+      "url": "https://converterpro.online",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://converterpro.online/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    })}
+  </script>
 
   <!-- GitHub Pages SPA Redirect Script -->
   <script type="text/javascript">
@@ -63,6 +85,15 @@
 
   <!-- Vite entry point -->
   <script type="module" src="/src/main.tsx"></script>
+
+  <!-- Google Analytics Placeholder -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
 </body>
 
 </html>
