--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
       }
     }(window.location))
   </script>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/webp" href="/SMFsmalllogo.webp" />
 </head>
 
 <body>
